# AdventOfCode2023

./: .gitignore  LICENSE  README.md  adventofcode2022.cabal  adventofcode2023.cabal
01_trebuchet/: Bench.hs  Main.hs  Spec.hs  Trebuchet.hs  day01.py
02_cube_conundrum/: Bench.hs  CubeConundrum.hs  Main.hs  Spec.hs  cube_conundrum.py  day02.py
03_gear_ratios/: Bench.hs  GearRatios.hs  Main.hs  Spec.hs  day03.py  gear_ratios.py
04_scratchcards/: scratchcards.py
05_if_you_give_a_seed_a_fertilizer/: if_you_give_a_seed_a_fertilizer.py
06_wait_for_it/: wait_for_it.py
07_camel_cards/: camel_cards.py
08_haunted_wasteland/: haunted_wasteland.py
09_mirage_maintenance/: mirage_maintenance.py
10_pipe_maze/: pipe_maze.py
11_cosmic_expansion/: cosmic_expansion.py
12_hot_springs/: hot_springs.py
13_point_of_incidence/: point_of_incidence.py
14_parabolic_reflector_dish/: parabolic_reflector_dish.py
lib/: AdventOfCode.hs
