cabal-version: 3.8
name: adventofcode2023
version: 0.1.0.0
synopsis: My solutions for the Advent Of Code 2023 challenge written in Haskell
description: https://github.com/Scriptim/AdventOfCode2023
homepage: https://github.com/Scriptim/AdventOfCode2023
bug-reports: https://github.com/Scriptim/AdventOfCode2023/issues
license: MIT
license-file: LICENSE
author: Scriptim
maintainer: me@scriptim.dev
copyright: 2023 Scriptim
extra-source-files:
    README.md

library adventofcode-internal
    exposed-modules:
        AdventOfCode
    hs-source-dirs:
        lib
    default-language: Haskell2010
    build-depends:
        , base
        , text
        , criterion
        , deepseq
        , directory
        , filepath
        , megaparsec
        , hspec

common aoc
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-import-lists -Wpartial-fields -Wredundant-constraints -Wunused-type-patterns -O2 -fwrite-ide-info -hiedir=.hie -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        , base
        , adventofcode2023:adventofcode-internal
        , text
        , extra
        , split
        , megaparsec
        , containers
        , vector
        , deepseq

common trebuchet
    import: aoc
    hs-source-dirs: 01_trebuchet
    other-modules: Trebuchet
executable trebuchet
    import: trebuchet
    main-is: Main.hs
test-suite trebuchet-test
    import: trebuchet
    main-is: Spec.hs
benchmark trebuchet-bench
    import: trebuchet
    main-is: Bench.hs

common cube-conundrum
    import: aoc
    hs-source-dirs: 02_cube_conundrum
    other-modules: CubeConundrum
executable cube-conundrum
    import: cube-conundrum
    main-is: Main.hs
test-suite cube-conundrum-test
    import: cube-conundrum
    main-is: Spec.hs
benchmark cube-conundrum-bench
    import: cube-conundrum
    main-is: Bench.hs
